results line items spacing corrected.  wrap text added to description with hover psudoclass to expand to full text overflow.  Additional styling for margins and text weight.

--- a/css/style.css
+++ b/css/style.css
@@ -62,13 +62,14 @@ header{
     justify-content: space-evenly;
 }
 
-#results-header-text{
-    font-size: 25px;
+#results-header-txt{
+    font-size: 20px;
     text-decoration: underline;
 }
 
  #results{
     background-color: #8299a8;
+    margin: 10px 0 0 0;
     
 }
 
@@ -111,4 +112,26 @@ input, select, #submit-btn{
 #modal-title{
     left: 50px;
     bottom:200px;
+}
+
+.level-item{
+    max-width: 350px;
+    max-height:30px;
+    overflow:hidden;
+    white-space: nowrap;
+    text-align: left;
+    display: block;
+    text-align: center;
+    width: 300px;
+}
+
+#date, #holiday, #description{
+    font-weight:lighter;
+}
+
+#description:hover{
+    overflow: visible;
+    white-space: normal;
+    max-height:300px;
+    
 }
